# 42_libft

./: ._main.c  ._main2.c  .gitignore  .gitmodules  CMakeLists.txt  Makefile  a.out  main  main.c  main2.c
includes/: libft.h
srcs/: Makefile  get_next_line.c
srcs/bit/: ft_bitdump.c  ft_hexdump.c  ft_printbit.c  ft_reversebit.c
srcs/includes/: libft.h
srcs/is/: ft_isascii.c  ft_islower.c  ft_isupper.c
srcs/list/: ft_list_del.c  ft_list_init.c  ft_list_print.c  ft_list_push_after_node.c  ft_list_push_back.c  ft_list_push_before_node.c  ft_list_push_front.c  ft_list_size.c  ft_list_str_split.c  ft_list_to_tab.c  ft_lst_pushafter_node.c  ft_lstd_new.c  ft_lstd_print.c  ft_lstd_pushback.c  ft_lstd_pushbefore_node.c  ft_lstnew.c  ft_lstprint.c  ft_lstpush_back.c  ft_lstpush_front.c  ft_lstsplit.c  ft_lsttotab.c  ft_push_after_node.c
srcs/mem/: a.out  ft_memalloc.c  ft_memmove.c  ft_memset.c
srcs/print/: ft_print_addr.c  ft_putchar_len_fd.c  ft_putendl.c  ft_putstr_len_fd.c  ft_putstr_len_fd_free.c
srcs/str/: ft_atoi_base.c  ft_del_char.c  ft_free_tab.c  ft_intlen.c  ft_itoa.c  ft_itoa_base.c  ft_lltoa_base.c  ft_ltoa.c  ft_nblen.c  ft_stradd_char.c  ft_strchr.c  ft_strcpy_limit.c  ft_strdup.c  ft_strjoin_free.c  ft_strjoin_free_s1.c  ft_strjoin_free_s2.c  ft_strlen.c  ft_strsplit.c  ft_tolower.c  ft_ulltoa_base.c
srcs/tab/: ft_free_tab.c  get_next_line.c
srcs/tab/str/: ft_strjoin_free.c
srcs/tree/: ft_tree_add.c  ft_tree_info_node.c  ft_tree_inorder.c  ft_tree_new.c  ft_tree_postorder.c  ft_tree_preorder.c  ft_tree_print_node.c
srcs/unicode/: ft_size_wchar.c  ft_strncpy_wchar.c  ft_wcharlen.c  ft_wconvert.c  ft_wconvert_str.c  ft_wlen.c
unit_test/: CMakeLists.txt
unit_test/basic_tests/: basic_check.cpp
unit_test/is_tests/: basic_check_is.cpp
